[package]
name = "wanmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12.23", features = ["blocking"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.5.0"
prometheus = "0.14.0"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }